@@ -20,6 +20,7 @@
     <!-- build:js scripts/angular.js -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-truncate/src/truncate.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
